trunk/Archive2/db/21f89bb1002066/output
main.cpp: In function 'int main()':
main.cpp:10:31: error: 'put_time' is not a member of 'std'
     std::cout << "ru_RU: " << std::put_time(&tm, "%c %Z") << '\n';
                               ^
main.cpp:12:31: error: 'put_time' is not a member of 'std'
     std::cout << "ja_JP: " << std::put_time(&tm, "%c %Z") << '\n';
                               ^
